--- a/pages/text/flip.liquid
+++ b/pages/text/flip.liquid
@@ -4,47 +4,46 @@ title: Flip text
 ---
 {% assign filename = page.fileSlug %}
 <section id="{{ filename }}" class="section">
-    <div class="py-4 px-2 px-sm-4">
-        <div class="section-heading mb-4">
-            <a class="d-flex justify-content-between section-toggle text-decoration-none d-none"
-                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
-                aria-expanded="false" aria-controls="{{ filename }}Collapse"
-                data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
-                <h2 class="display-6 w-100 d-flex m-0">
-                    Flip text
-                </h2>
-                <span class="text-light px-1 border rounded align-self-end toggle-button"data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Collapse section">
-                    <i class="bi bi-arrow-up lh-base"></i>
-                </span>
-            </a>
-            <hr class="d-none">
-            <p class="px-2">
+    <div class="section-heading">
+        <a class="d-flex justify-content-between section-toggle text-decoration-none d-none pt-4 pb-3 px-2 px-sm-4"
+            data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" aria-expanded="true"
+            aria-controls="{{ filename }}Collapse" data-section-name="{{ filename }}"
+            data-section-description="Toggle visibility of {{ filename }} section">
+            <h2 class="display-6 w-100 d-flex m-0">
+                {{ filename | upperFirst }} text
+            </h2>
+            <span class="text-light px-1 border rounded align-self-end toggle-button">
+                <i class="bi bi-arrow-up lh-base"></i>
+            </span>
+        </a>
+        <hr class="d-none my-0 mx-4">
+        <div class="section-description py-3 px-2 px-sm-4">
+            <p>
                 Flip text upside down - allows you to turn <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">this</code> into <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">ʇɥıs</code>
             </p>
         </div>
-        <div class="collapse show" id="{{ filename }}Collapse">
-            <div class="col">
-                <div class="card">
-                    <span class="card-label visually-hidden">Flip Text</span>
-                    <div class="card-body text-center">
-                        <label for="{{ filename }}Text" class="visually-hidden">Flip text upside down</label>
-                        <textarea placeholder="Example: Hello → Hǝןןo" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
-                    </div>
-                    <div class="card-footer py-3">
-                        <div class="d-flex justify-content-start align-items-center">
-                            <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Flip text upside down">{{ filename | upperFirst }}</button>
-                            <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Direction" aria-checked="false">
-                                <label class="form-check-label" for="{{ filename }}Direction">Reverse</label>
-                            </div>
-                            {% include "components/select-copy-dl" %}
+    </div>
+    <div class="pb-4 px-2 px-sm-4 collapse show" id="{{ filename }}Collapse">
+        <div class="col">
+            <div class="card">
+                <span class="card-label visually-hidden">Flip Text</span>
+                <div class="card-body text-center">
+                    <label for="{{ filename }}Text" class="visually-hidden">Flip text upside down</label>
+                    <textarea placeholder="Example: Hello → Hǝןןo" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                </div>
+                <div class="card-footer py-3">
+                    <div class="d-flex justify-content-start align-items-center">
+                        <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Flip text upside down">{{ filename | upperFirst }}</button>
+                        <div class="form-check form-switch mx-2">
+                            <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Direction" aria-checked="false">
+                            <label class="form-check-label" for="{{ filename }}Direction">Reverse</label>
                         </div>
-                        <hr />
-                        <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
+                        {% include "components/select-copy-dl" %}
                     </div>
+                    <hr />
+                    <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
                 </div>
             </div>
         </div>
-    </div>
 </section>
 {% render "dynamic-script", page: page %}
