--- a/pages/misc/forerunner.liquid
+++ b/pages/misc/forerunner.liquid
@@ -4,9 +4,8 @@ title: Forerunner glyphs
 ---
 {% assign filename = page.fileSlug %}
 <section id="{{ filename }}" class="section">
-    <div class="py-4 px-2 px-sm-4">
-        <div class="section-heading mb-4">
-            <a class="d-flex justify-content-between section-toggle text-decoration-none d-none"
+<div class="section-heading">
+            <a class="d-flex justify-content-between section-toggle text-decoration-none d-none pt-4 pb-3 px-2 px-sm-4"
                 data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
                 aria-expanded="true" aria-controls="{{ filename }}Collapse"
                 data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
@@ -17,15 +16,16 @@ title: Forerunner glyphs
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
             </a>
-            <hr class="d-none">
-            <p class="px-2">
+            <hr class="d-none my-0 mx-4">
+        <div class="section-description py-3 px-2 px-sm-4">
                 Convert Forerunner glyphs from the video game <a href="https://www.halowaypoint.com/" title="HaloWaypoint.com - the official site for the Halo universe" class="text-convrtr">Halo</a> to their text alternative, these glyphs were primarily used during an <a href="https://www.halopedia.org/Section_3_ARG" title="Halopedia - Section 3 ARG" class="text-convrtr">ARG</a> for Halo 4. The "Create image" button downloads an image version of the glyphs selected and displayed below the text version.
             </p>
             <p class="px-2">
                  There is more information available on the <a href="https://www.halopedia.org/Forerunner_symbols" class="text-convrtr">Forerunner symbols</a> Halopedia page. 
             </p>
         </div>
-        <div class="collapse show" id="{{ filename }}Collapse">
+    </div>
+    <div class="pb-4 px-2 px-sm-4 collapse show" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Forerunner glyphs</span>
@@ -100,6 +100,5 @@ title: Forerunner glyphs
                 </div>
             </div>
         </div>
-    </div>
 </section>
 {% render "dynamic-script", page: page %}
