--- a/pages/ciphers/smithy.liquid
+++ b/pages/ciphers/smithy.liquid
@@ -18,10 +18,10 @@ title: Smithy cipher
         </a>
         <hr class="d-none my-0 mx-4">
         <div class="section-description py-3 px-2 px-sm-4">
+            <p class="px-2">
                 Smithy is interesting cipher, built using the fibonacci sequence as part of the keyword ecryption/decryption process. It was originally made for private amusement, and included in documentation in The Da Vinci Code copyright case. For example: 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">Hello</code> encrypted with a key of <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">World</code> would shift like: 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">Rmxsp</code> 
-
             </p>
             <p class="px-2">
                 There is more information available on the <a href="https://en.wikipedia.org/wiki/Smithy_code" class="text-convrtr">{{
