--- a/pages/ciphers/substitution.liquid
+++ b/pages/ciphers/substitution.liquid
@@ -18,6 +18,7 @@ title: Substitution cipher
         </a>
         <hr class="d-none my-0 mx-4">
         <div class="section-description py-3 px-2 px-sm-4">
+            <p class="px-2">
                 A substitution cipher uses a key or a phrase to make a new alphabet, with the end result potentially being a completely jumbled up alphabet. 
             </p>
             <p class="px-2">
