--- a/pages/ciphers/hash.liquid
+++ b/pages/ciphers/hash.liquid
@@ -18,6 +18,7 @@ title: Hash
         </a>
         <hr class="d-none my-0 mx-4">
         <div class="section-description py-3 px-2 px-sm-4">
+            <p class="px-2">
                 Generate various hash values for a given text string. More information about hashes and the libraries used here, can be found on the <a href="https://cryptojs.gitbook.io/docs/" class="text-convrtr"">CryptoJS Gitbook</a> documentation site.
             </p>
         </div>
