--- a/pages/ciphers/atbash.liquid
+++ b/pages/ciphers/atbash.liquid
@@ -45,7 +45,7 @@ title: Atbash cipher
                             <div class="col col-12 col-sm-auto flex-fill">
                                 <div class="row row-cols-auto g-1">
                                     <div class="input-group w-auto">
-                                        <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Encrypt">Encrypt</button>
+                                        <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode">Encrypt</button>
                                     </div>
                                     <div class="form-check form-switch text-start ms-2">
                                         <input class="form-check-input" type="checkbox" role="switch" id="chainAb" aria-checked="false">
