Cleaning up redundant titles, missing accessible titles, markup and missing p tags

--- a/pages/ciphers/chaocipher.liquid
+++ b/pages/ciphers/chaocipher.liquid
@@ -44,7 +44,7 @@ title: Chaocipher
                         <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                             <div class="col col-12 col-md-auto">
                                 <div class="input-group w-auto">
-                                    <button type="button" class="btn btn-convrtr" id="{{ filename }}Encrypt" title="Encrypt">Encrypt</button>
+                                    <button type="button" class="btn btn-convrtr" id="{{ filename }}Encrypt">Encrypt</button>
                                     <button class="btn btn-outline-convrtr" type="button" id="{{ filename }}Decrypt">Decrypt</button>
                                 </div>
                             </div>
