--- a/pages/hex/frequencies.liquid
+++ b/pages/hex/frequencies.liquid
@@ -5,19 +5,20 @@ title: Hex frequencies
 {% assign filename = page.fileSlug %}
 <section id="{{ filename }}" class="section">
 <div class="section-heading">
-            <a class="d-flex justify-content-between section-toggle text-decoration-none d-none pt-4 pb-3 px-2 px-sm-4"
-                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
-                aria-expanded="false" aria-controls="{{ filename }}Collapse"
-                data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
-                <h2 class="display-6 w-100 d-flex m-0">
-                    Hex frequencies
-                </h2>
-                <span class="text-light px-1 border rounded align-self-end toggle-button" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Collapse section">
-                    <i class="bi bi-arrow-up lh-base"></i>
-                </span>
-            </a>
-            <hr class="d-none my-0 mx-4">
+        <a class="d-flex justify-content-between section-toggle text-decoration-none d-none pt-4 pb-3 px-2 px-sm-4"
+            data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+            aria-expanded="false" aria-controls="{{ filename }}Collapse"
+            data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
+            <h2 class="display-6 w-100 d-flex m-0">
+                Hex frequencies
+            </h2>
+            <span class="text-light px-1 border rounded align-self-end toggle-button" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Collapse section">
+                <i class="bi bi-arrow-up lh-base"></i>
+            </span>
+        </a>
+        <hr class="d-none my-0 mx-4">
         <div class="section-description py-3 px-2 px-sm-4">
+            <p class="px-2">
                 For a given string of Hexadecimal, list out the frequencies of various hex combinations. This can be useful when looking at data-driven puzzles, and trying to find recognizable patterns.
             </p>
             <p class="px-2">
@@ -26,37 +27,37 @@ title: Hex frequencies
         </div>
     </div>
     <div class="pb-4 px-2 px-sm-4 collapse show" id="{{ filename }}Collapse">
-            <div class="col">
-                <div class="card">
-                    <span class="card-label visually-hidden">Hex frequencies</span>
-                    <div class="card-body text-center">
-                        <label for="{{ filename }}Text" class="visually-hidden">Hex characters to check</label>
-                        <textarea placeholder="Enter some hex characters and click the 'Generate' button below" rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
-                    </div>
-                    <div class="card-footer py-3">
-                        <div class="text-center mb-4 g-0">
-                            <div class="row row-cols-2 g-md-0 gx-0 gy-2">
-                                <div class="col col-12 col-md-auto">
-                                    <div class="input-group w-auto">
-                                        <label class="input-group-text" for="{{ filename }}Delimiter">Delimiter</label>
-                                        {% include "components/delimiter" %}
-                                        <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Generate hex frequencies">Generate</button>
-                                    </div>
+        <div class="col">
+            <div class="card">
+                <span class="card-label visually-hidden">Hex frequencies</span>
+                <div class="card-body text-center">
+                    <label for="{{ filename }}Text" class="visually-hidden">Hex characters to check</label>
+                    <textarea placeholder="Enter some hex characters and click the 'Generate' button below" rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
+                </div>
+                <div class="card-footer py-3">
+                    <div class="text-center mb-4 g-0">
+                        <div class="row row-cols-2 g-md-0 gx-0 gy-2">
+                            <div class="col col-12 col-md-auto">
+                                <div class="input-group w-auto">
+                                    <label class="input-group-text" for="{{ filename }}Delimiter">Delimiter</label>
+                                    {% include "components/delimiter" %}
+                                    <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Generate hex frequencies">Generate</button>
                                 </div>
-                                <div class="col-12 col-md-auto flex-fill">
-                                    <div class="row row-cols-auto g-0">
-                                        {% include "components/select-copy-dl" %}
-                                    </div>
+                            </div>
+                            <div class="col-12 col-md-auto flex-fill">
+                                <div class="row row-cols-auto g-0">
+                                    {% include "components/select-copy-dl" %}
                                 </div>
                             </div>
                         </div>
-                        <hr />
-                        <div class="">
-                            <div class="grid g-4 my-1 data-to-copy active convrtr-results" id="{{ filename }}Results"></div>
-                        </div>
+                    </div>
+                    <hr />
+                    <div class="">
+                        <div class="grid g-4 my-1 data-to-copy active convrtr-results" id="{{ filename }}Results"></div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </section>
 {% render "dynamic-script", page: page %}
